@@ -45,7 +45,11 @@ CHANGES
       the instance is part of the eager join, to prevent
       conflicts with a subquery or column of the same name 
       on the parent object.  [ticket:1019]
-      
+
+    - Removed a class-member inspection step from attribute
+      instrumentation that could be problematic when integrating
+      with other frameworks.
+
 - declarative extension
     - Joined table inheritance mappers use a slightly relaxed
       function to create the "inherit condition" to the parent
@@ -84,7 +88,6 @@ CHANGES
 
       This should obviate the need of adding a myriad of ODBC
       options in the future.
-
 
 - firebird
     - Handle the "SUBSTRING(:string FROM :start FOR :length)"
